updates api front end, with navbar and image

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,17 @@
 </head>
 
 <body>
+
+    <div id="nav-bar">
+        <div class="items">
+            <img id="nav-img" src="./assets/images/Unravel01.png">
+            <h1>Unravel API</h1>
+            <a href="https://github.com/Unravel-Mobile/Unravel">Unravel App</a>
+            <a href="https://exp.host/@sl8305/UnravelApp">See it with Android device</a>
+        </div>
+    </div>
     <!-- <div class="container"> -->
-    <img src="/assets/images/UnravelSun.png">
+    <!-- <img src="/assets/images/UnravelSun.png"> -->
     <!-- </div> -->
     <h1 id="title">Unravel API</h1>
     <p id="text">If you have an Android device you can follow the link to EXPO</p>
@@ -47,19 +56,26 @@
     <div id="center">
 
         <aside id="left-side">
-            <p class="info"><span class="titulo">•  Unravel Mobile®:</span> Is a Cognitive Behavioral Therapy Tool for Patients and Therapists.</p>
+            <p id="about">About:</p>
+            <p class="info"><span class="titulo">• Unravel Mobile®:</span> Is a Cognitive Behavioral Therapy Tool for
+                Patients and Therapists.</p>
 
-            <p class="info"><span class="titulo">• Traditional Method:</span> Based on the Automatic Thought Record: A pen & paper therapeutic tool
+            <p class="info"><span class="titulo">• Traditional Method:</span> Based on the Automatic Thought Record: A
+                pen & paper therapeutic tool
                 (weekly homework).</p>
 
-            <p class="info"><span class="titulo">• Challenge:</span> Therapists have challenges with patients completing the ATR.</p>
+            <p class="info"><span class="titulo">• Challenge:</span> Therapists have challenges with patients completing
+                the ATR.</p>
 
-            <p class="info"><span class="titulo">• Approach:</span> Leverage mobile to engage patients to completing the ATR.</p class="info">
+            <p class="info"><span class="titulo">• Approach:</span> Leverage mobile to engage patients to completing the
+                ATR.</p class="info">
 
-            <p class="info"><span class="titulo">Unravel Mobile®:</span> Offers an alternative to the traditional method of recording destressing
+            <p class="info"><span class="titulo">Unravel Mobile®:</span> Offers an alternative to the traditional method
+                of recording destressing
                 events,
                 which a lot of times by the time the oportunity of putting pen to paper finally arrives the emotions are
-                not the same; Unravel Mobile® offers the user the opportunity to log how they are feeling at the touch of a
+                not the same; Unravel Mobile® offers the user the opportunity to log how they are feeling at the touch
+                of a
                 couple of buttons.</p>
         </aside>
 
@@ -70,7 +86,8 @@
     </div>
 
     <div class="boton">
-        <a class="to-expo" href="https://github.com/Unravel-Mobile/Unravel" target="_blank" role="button">Check out the Mobile APP</a>
+        <a class="to-expo" href="https://exp.host/@sl8305/UnravelApp" target="_blank" role="button">Check out the
+            Mobile APP</a>
     </div>
 
     <footer>
