updates path to navbar image

--- a/public/index.html
+++ b/public/index.html
@@ -40,15 +40,13 @@
 
     <div id="nav-bar">
         <div class="items">
-            <img id="nav-img" src="./assets/images/Unravel01.png">
+            <img id="nav-img" src="/assets/images/Unravel01.png">
             <h1>Unravel API</h1>
             <a href="https://github.com/Unravel-Mobile/Unravel">Unravel App</a>
             <a href="https://exp.host/@sl8305/UnravelApp">See it with Android device</a>
         </div>
     </div>
-    <!-- <div class="container"> -->
-    <!-- <img src="/assets/images/UnravelSun.png"> -->
-    <!-- </div> -->
+
     <h1 id="title">Unravel API</h1>
     <p id="text">If you have an Android device you can follow the link to EXPO</p>
     <hr class="line">
