--- a/public/index.html
+++ b/public/index.html
@@ -16,70 +16,48 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="/stylesheet/style.css" rel="stylesheet">
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
     </head>
-
-<body>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
 </head>
 
 <body>
-
-    <div id="nav-bar">
-        <div class="items">
-            <img id="nav-img" src="/assets/images/unravel01.png">
-            <h1>Unravel API</h1>
-            <a href="https://github.com/Unravel-Mobile/Unravel">Unravel App</a>
-            <a href="https://exp.host/@sl8305/UnravelApp">See it with Android device</a>
-        </div>
+    <div id="top">
+        <h1 id="date">Seattle, WA 2020</h1>
+        <h1 id="help-line">A Cognitive Behavioral Therapy Tool for Patients and Therapists</h1>
+        <h1 id="title">Unravel API</h1>
+        <p id="text"><span>*AKA UnravelApp</span></p>
     </div>
-
-    <h1 id="title">Unravel API</h1>
-    <p id="text">If you have an Android device you can follow the link to EXPO</p>
-    <hr class="line">
+    <!-- <hr class="line"> -->
 
     <div id="center">
 
-        <aside id="left-side">
-            <p id="about">About:</p>
-            <p class="info"><span class="titulo">• Unravel Mobile®:</span> Is a Cognitive Behavioral Therapy Tool for
-                Patients and Therapists.</p>
+        <div id="div-one">
+            <img id="unravel" src="./assets/images/unravel01.png">
+            <p id="about">Motivation behind Unravel</p>
+            <p class="info"><span class="titulo">• Traditional Method:</span> Based on the Automatic Thought Record: A pen & paper therapeutic tool (weekly homework).</p>
+            <p class="info"><span class="titulo">• Traditional Method:</span> Based on the Automatic Thought Record: A pen & paper therapeutic tool (weekly homework).</p>
+            <p class="info"><span class="titulo">• Challenge:</span> Therapists have challenges with patients completing the ATR.</p>
+            <p class="info"><span class="titulo">• Approach:</span> Leverage mobile to engage patients to completing the ATR.</p class="info">
+        </div>
 
-            <p class="info"><span class="titulo">• Traditional Method:</span> Based on the Automatic Thought Record: A
-                pen & paper therapeutic tool
-                (weekly homework).</p>
+        <div id="div-two">
+            <img id="unravel" src="./assets/images/unravelsun.png">
+            <p class="info"><span class="titulo">Unravel Mobile®:</span> Offers an alternative to the traditional method of recording destressing events, which a lot of times by the time the oportunity of putting pen to paper finally arrives the emotions are not the same; Unravel Mobile® offers the user the opportunity to log how they are feeling at the touch of a couple of buttons.</p>
+        </div>
 
-            <p class="info"><span class="titulo">• Challenge:</span> Therapists have challenges with patients completing
-                the ATR.</p>
-
-            <p class="info"><span class="titulo">• Approach:</span> Leverage mobile to engage patients to completing the
-                ATR.</p class="info">
-
-            <p class="info"><span class="titulo">Unravel Mobile®:</span> Offers an alternative to the traditional method
-                of recording destressing
-                events,
-                which a lot of times by the time the oportunity of putting pen to paper finally arrives the emotions are
-                not the same; Unravel Mobile® offers the user the opportunity to log how they are feeling at the touch
-                of a
-                couple of buttons.</p>
-        </aside>
-
-        <aside id="right-side">
+        <div id="div-three">
             <img id="side-gif" src="/assets/images/unravel.gif">
-        </aside>
+        </div>
 
     </div>
 
@@ -89,8 +67,20 @@
     </div>
 
     <footer>
-        <p id="pie">Unravel APP 2020</p>
+        <p id="pie">Created by The 3 Musketeers</p>
+        <p id="people">Shad Lee, Mariño Carranza and Jenn June</p>
     </footer>
+
+
+    <!-- <div id="nav-bar">
+        <div class="items">
+            <img id="nav-img" src="/assets/images/unravel01.png">
+            <h1>Unravel API</h1>
+            <a href="https://github.com/Unravel-Mobile/Unravel">Unravel App</a>
+            <a href="https://exp.host/@sl8305/UnravelApp">See it with Android device</a>
+        </div>
+    </div> -->
+
 
 </body>
 
