adds latest gif, tweaks style, updates readme and updates index with correct wording

--- a/public/index.html
+++ b/public/index.html
@@ -45,18 +45,17 @@
             <img id="unravel" src="./assets/images/unravel01.png">
             <p id="about">Motivation behind Unravel</p>
             <p class="info"><span class="titulo">• Traditional Method:</span> Based on the Automatic Thought Record: A pen & paper therapeutic tool (weekly homework).</p>
-            <p class="info"><span class="titulo">• Traditional Method:</span> Based on the Automatic Thought Record: A pen & paper therapeutic tool (weekly homework).</p>
             <p class="info"><span class="titulo">• Challenge:</span> Therapists have challenges with patients completing the ATR.</p>
-            <p class="info"><span class="titulo">• Approach:</span> Leverage mobile to engage patients to completing the ATR.</p class="info">
+            <p class="info"><span class="titulo">• Approach:</span> Leverage mobile to engage patients to complete the ATR.</p class="info">
         </div>
 
         <div id="div-two">
             <img id="unravel" src="./assets/images/UnravelSun.png">
-            <p class="info"><span class="titulo">Unravel Mobile®:</span> Offers an alternative to the traditional method of recording destressing events, which a lot of times by the time the oportunity of putting pen to paper finally arrives the emotions are not the same; Unravel Mobile® offers the user the opportunity to log how they are feeling at the touch of a couple of buttons.</p>
+            <p class="info"><span class="titulo">Unravel Mobile®:</span> Offers an alternative to the traditional method of recording distressing events; often emotions have changed by the time one is able to put pen to paper. Unravel Mobile® offers the user the opportunity to log how they are feeling at the touch of a couple of buttons.</p>
         </div>
 
         <div id="div-three">
-            <img id="side-gif" src="/assets/images/unravel.gif">
+            <img id="side-gif" src="/assets/images/demoday.gif">
         </div>
 
     </div>
@@ -68,7 +67,8 @@
 
     <footer>
         <p id="pie">Created by The 3 Musketeers</p>
-        <p id="people">Shad Lee, Mariño Carranza and Jenn June</p>
+        <p class="pie">Feel free to contact us via email</p>
+        <p id="people"><a href="sl8305@hotmail.com">Shad Lee</a>, <a href="marino.carranza@gmail.com">Mariño Carranza</a>  and Jenn June</p>
     </footer>
 
 
