fixes email links

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
     <footer>
         <p id="pie">Created by The 3 Musketeers</p>
         <p class="pie">Feel free to contact us via email</p>
-        <p id="people"><a href="sl8305@hotmail.com">Shad Lee</a>, <a href="marino.carranza@gmail.com">Mariño Carranza</a>  and Jenn June</p>
+        <p id="people"><a href="mailto:sl8305@hotmail.com">Shad Lee</a>, <a href="mailto:marino.carranza@gmail.com">Mariño Carranza</a>  and Jenn June</p>
     </footer>
 
 
