updates paths to style sheets and .json files

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
-        <link href="/stylesheet/reset.css" rel="stylesheet">
+        <link href="./stylesheet/reset.css" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link href="/stylesheet/style.css" rel="stylesheet">
+        <link href="./stylesheet/style.css" rel="stylesheet">
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -55,7 +55,7 @@
         </div>
 
         <div id="div-three">
-            <img id="side-gif" src="/assets/images/demoday.gif">
+            <img id="side-gif" src="./assets/images/demoday.gif">
         </div>
 
     </div>
